--- a/package.json
+++ b/package.json
@@ -80,8 +80,8 @@
   "scripts": {
     "test": "mocha --config=.mocharc.yml",
     "pretest": "npm run check",
-    "build": "rimraf dist && rollup -c",
-    "check": "rimraf dist && cross-env TS_CHECK_ENABLED=true rollup -c",
+    "build": "npx rimraf dist && rollup -c",
+    "check": "npx rimraf dist && cross-env TS_CHECK_ENABLED=true rollup -c",
     "lint": "eslint '{src,runtime,test}/**/*.{ts,js,svelte}' && cd site && npm run lint",
     "prepare": "npm run build",
     "dev": "rollup -cw",
