--- a/package.json
+++ b/package.json
@@ -80,9 +80,9 @@
   "scripts": {
     "test": "mocha --config=.mocharc.yml",
     "pretest": "npm run check",
-    "build": "npx rimraf dist && rollup -c",
-    "check": "npx rimraf dist && cross-env TS_CHECK_ENABLED=true rollup -c",
-    "lint": "eslint '{src,runtime,test}/**/*.{ts,js,svelte}' && cd site && npm run lint",
+    "build": "npx rimraf dist && npx rollup -c",
+    "check": "npx rimraf dist && npx cross-env TS_CHECK_ENABLED=true rollup -c",
+    "lint": "npx eslint '{src,runtime,test}/**/*.{ts,js,svelte}' && cd site && npm run lint",
     "prepare": "npm run build",
     "dev": "rollup -cw",
     "prepublishOnly": "npm test"
